--- a/packaging/torchaudio/meta.yaml
+++ b/packaging/torchaudio/meta.yaml
@@ -16,6 +16,7 @@ requirements:
     - setuptools
     - cmake
     - ninja
+    - ffmpeg
     - defaults::numpy >=1.11
     - pytorch-mutex 1.0 {{ build_variant }}  # [not osx ]
     {{ environ.get('CONDA_PYTORCH_BUILD_CONSTRAINT', 'pytorch') }}
